tests/ui/readschema_reject_count.rs
#[derive(ReadSchema)]
struct S {
}

fn main() {}
